apps/table/src/styles.scss
/* You can add global styles to this file, and also import other style files */

html {
  -webkit-text-size-adjust: 100%;
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
  'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
  'Noto Color Emoji';
  line-height: 1.5;
  tab-size: 4;
  scroll-behavior: smooth;
  height: 100%;
}
body {
  font-family: inherit;
  line-height: inherit;
  margin: 0;
  min-height: 100%;
  height: 100%;
}
h1,
h2,
p,
pre {
  margin: 0;
}
*,
::before,
::after {
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}
h1,
h2 {
  font-size: inherit;
  font-weight: inherit;
}
a {
  color: inherit;
  text-decoration: inherit;
}

#root {
  height: 100%;
}

